2007-10-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   Attempt to fix problem with tab close button size.
 * src/keyfile.c, doc/geany.txt, doc/geany.html:
   Don't overwrite hidden prefs when quitting unless they are missing.
 * src/keybindings.c, src/keyfile.c, src/vte.h, doc/geany.txt,
   doc/geany.html, NEWS:
   Move and rename the bash shortcuts hidden preference - it's now in
   geany.conf, [VTE] section, called 'enable_bash_keys'.


2007-10-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c: Fix scrolling bugs when searching text and the cursor
                   is outside of the current visible area.
                   Unfold search result.
 * src/main.c: Also print version of Geany together with GTK/GLib
               version information.


2007-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/python.c:
   Show parent class for inner classes.
 * src/notebook.c:
   Use stock close image for notebook tab close buttons.


2007-09-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Also ignore Ctrl-L for VTE bash command.
   Allow 'Switch to editor' command to override any bash commands.
   Also disable the popup menu to avoid VTE bash conflicts.
 * src/main.c, src/symbols.c, src/symbols.h:
   Add --no-preprocessing, -P option when generating tags files to
   disable preprocessing of C/C++ source files.
 * doc/geany.txt, doc/geany.html, doc/geany.1.in, NEWS:
   Add documentation for --no-preprocessing option.
 * src/keybindings.c:
   Add Project Properties menu accelerator.
 * tagmanager/vstring.h, tagmanager/vstring.c:
   Fix a possible segfault with vStringPut() - backported from CTags
   5.7. This appears to fix a segfault on Windows 2000 when loading
   tagmanager/c.c.
   It also adds vStringChop() - chop last character from string.


2007-09-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keyfile.c: